--- a/i18n/locales/en/meta.json
+++ b/i18n/locales/en/meta.json
@@ -32,6 +32,10 @@
       "title": "Stress Relief Bubbles - Interactive Game",
       "description": "Interactive bubble popping game for stress relief and anxiety management. Satisfying sensory experience for tension release."
     },
+    "fidgetSpinner": {
+      "title": "Online Fidget Spinner - Calming Motion for Restless Energy",
+      "description": "Minimal virtual fidget spinner with realistic momentum. Drag to spin, release to settle, and give restless hands a steady outlet."
+    },
     "soundTherapy": {
       "title": "Sound Therapy - Healing Frequencies for Anxiety",
       "description": "Free sound therapy with healing frequencies and binaural beats. Deep relaxation audio for anxiety and stress relief."
