--- a/i18n/locales/es/meta.json
+++ b/i18n/locales/es/meta.json
@@ -32,6 +32,10 @@
       "title": "Burbujas de Alivio del Estrés - Juego Interactivo",
       "description": "Juego interactivo de reventar burbujas para el alivio del estrés y el manejo de la ansiedad. Experiencia sensorial satisfactoria para liberar tensión."
     },
+    "fidgetSpinner": {
+      "title": "Fidget Spinner en Línea - Movimiento Calmante para la Energía Inquieta",
+      "description": "Fidget spinner virtual minimalista con impulso realista. Arrastra para girar, suelta para que se asiente y brinda a las manos inquietas una salida constante."
+    },
     "soundTherapy": {
       "title": "Terapia de Sonido - Frecuencias Curativas para la Ansiedad",
       "description": "Terapia de sonido gratuita con frecuencias curativas y ritmos binaurales. Audio de relajación profunda para el alivio de la ansiedad y el estrés."
