--- a/i18n/locales/fr/meta.json
+++ b/i18n/locales/fr/meta.json
@@ -32,6 +32,10 @@
       "title": "Bulles anti-stress - Jeu interactif",
       "description": "Jeu interactif de bulles à éclater pour soulager le stress et gérer l'anxiété. Expérience sensorielle satisfaisante pour relâcher la tension."
     },
+    "fidgetSpinner": {
+      "title": "Fidget Spinner en Ligne - Mouvement Apaisant pour l'Énergie Agitée",
+      "description": "Fidget spinner virtuel minimaliste avec un élan réaliste. Faites glisser pour lancer, relâchez pour le laisser se poser et offrez à des mains agitées un exutoire stable."
+    },
     "soundTherapy": {
       "title": "Thérapie sonore - Fréquences curatives contre l'anxiété",
       "description": "Thérapie sonore gratuite avec fréquences curatives et battements binauraux. Audio de relaxation profonde pour soulager l'anxiété et le stress."
