--- a/i18n/locales/he/exercises.json
+++ b/i18n/locales/he/exercises.json
@@ -1260,6 +1260,15 @@
       }
     }
   },
+  "fidgetSpinner": {
+    "aria": {
+      "spinnerLabel": "ספינר אינטראקטיבי להרגעת חרדה. גררו כדי לסובב ושחררו כדי לתת לו להחליק.",
+      "status": {
+        "spinning": "הספינר בתנועה",
+        "still": "הספינר במנוחה"
+      }
+    }
+  },
   "soundTherapy": {
     "title": "טיפול בצליל וריפוי בתדרים",
     "description": "חווה תדרים טיפוליים ופעימות בינאוראליות כדי לקדם הרפיה עמוקה, להפחית חרדה ולשפר מיקוד באמצעות טיפול קולי מבוסס מדע.",
