--- a/i18n/locales/he/meta.json
+++ b/i18n/locales/he/meta.json
@@ -32,6 +32,10 @@
       "title": "בועות לשחרור מתח - משחק אינטראקטיבי",
       "description": "משחק אינטראקטיבי של פיצוץ בועות להקלה על מתח וניהול חרדה. חוויה חושית מספקת לשחרור מתחים."
     },
+    "fidgetSpinner": {
+      "title": "ספינר מקוון - תנועה מרגיעה לאנרגיה חסרת מנוח",
+      "description": "ספינר וירטואלי מינימליסטי עם אינרציה מציאותית. גררו כדי לסובב, שחררו כדי לתת לו להירגע, ותנו לידיים חסרות מנוח מוצא יציב."
+    },
     "soundTherapy": {
       "title": "תרפיית צלילים - תדרים מרפאים לחרדה",
       "description": "תרפיית צלילים חינמית עם תדרים מרפאים והקלטות בינאוראליות. שמע להרפיה עמוקה והקלה על חרדה ומתח."
