--- a/i18n/locales/he/techniques.json
+++ b/i18n/locales/he/techniques.json
@@ -42,6 +42,12 @@
       "description": "לפעמים הדרך הטובה ביותר להתמודד עם חרדה היא באמצעות הסחת דעת עדינה ומשחק. פעילות אינטראקטיבית פשוטה זו עוזרת להסיט אנרגיה עצבנית תוך מתן הפסקה למוח ממחשבות חרדתיות.",
       "duration": "2-5 דקות"
     },
+    "fidgetSpinner": {
+      "name": "ספינר מקוון",
+      "short_description": "העניקו לידיים חסרות מנוח תנועה מסתובבת, רגועה וחוזרת בכל מכשיר.",
+      "description": "סובבו, שחררו ותנו לאינרציה להאט. המיקוד הטקטילי הפשוט נותן לידיים עוגן קבוע בזמן שהעיניים עוקבות אחר תבנית חזותית נקייה—יעיל כשצריך מוצא שקט לעודף אנרגיה.",
+      "duration": "1-3 דקות"
+    },
     "soundTherapy": {
       "name": "תרפיית צלילים",
       "short_description": "תדרים מרפאים המעודדים רגיעה ובהירות מחשבתית",
