--- a/i18n/locales/nl/meta.json
+++ b/i18n/locales/nl/meta.json
@@ -32,6 +32,10 @@
       "title": "Stressverlichting Bellen - Interactief Spel",
       "description": "Interactief bellen pop spel voor stressverlichting en angstmanagement. Bevredigende sensorische ervaring voor spanningsrelease."
     },
+    "fidgetSpinner": {
+      "title": "Online Fidget Spinner - Kalmerende Beweging voor Onrustige Energie",
+      "description": "Minimalistische virtuele fidget spinner met realistisch momentum. Sleep om te draaien, laat los om te laten uitrazen en geef onrustige handen een vaste uitlaatklep."
+    },
     "soundTherapy": {
       "title": "Geluidstherapie - Helende Frequenties voor Angst",
       "description": "Gratis geluidstherapie met helende frequenties en binaurale beats. Diepe ontspanning audio voor angst- en stressverlichting."
