--- a/i18n/locales/pt/meta.json
+++ b/i18n/locales/pt/meta.json
@@ -32,6 +32,10 @@
       "title": "Bolhas anti-estresse - jogo interativo",
       "description": "Jogo interativo de estourar bolhas para alívio do estresse e manejo da ansiedade. Experiência sensorial satisfatória para liberação de tensão."
     },
+    "fidgetSpinner": {
+      "title": "Fidget Spinner Online - Movimento Calmante para Energia Inquieta",
+      "description": "Fidget spinner virtual minimalista com impulso realista. Arraste para girar, solte para ele assentar e dê às mãos inquietas uma saída estável."
+    },
     "soundTherapy": {
       "title": "Terapia sonora - frequências de cura para ansiedade",
       "description": "Terapia sonora gratuita com frequências de cura e sons binaurais. Áudio para relaxamento profundo e alívio da ansiedade e do estresse."
