--- a/i18n/locales/ru/exercises.json
+++ b/i18n/locales/ru/exercises.json
@@ -1260,6 +1260,15 @@
       }
     }
   },
+  "fidgetSpinner": {
+    "aria": {
+      "spinnerLabel": "Интерактивный спиннер для снижения тревоги. Проведите, чтобы раскрутить, и отпустите, чтобы он свободно вращался.",
+      "status": {
+        "spinning": "Спиннер вращается",
+        "still": "Спиннер остановлен"
+      }
+    }
+  },
   "soundTherapy": {
     "title": "Звуковая терапия и исцеление частотами",
     "description": "Испытайте терапевтические частоты и бинауральные ритмы для глубокого расслабления, снижения тревожности и повышения фокуса через научно обоснованную звуковую терапию.",
