--- a/i18n/locales/ru/meta.json
+++ b/i18n/locales/ru/meta.json
@@ -32,6 +32,10 @@
       "title": "Антистрессовые пузыри - интерактивная игра",
       "description": "Интерактивная игра с лопанием пузырей для снятия стресса и контроля тревожности. Дает приятный сенсорный опыт для расслабления."
     },
+    "fidgetSpinner": {
+      "title": "Онлайн-спиннер — спокойное движение для лишней энергии",
+      "description": "Минималистичный виртуальный спиннер с реалистичной инерцией. Проведите, чтобы запустить, отпустите, чтобы он затухал, и дайте беспокойным рукам ровный выход."
+    },
     "soundTherapy": {
       "title": "Звуковая терапия - целебные частоты",
       "description": "Бесплатная звуковая терапия с целебными частотами и бинауральными ритмами. Аудио для глубокого расслабления и снятия стресса."
