--- a/i18n/locales/ru/techniques.json
+++ b/i18n/locales/ru/techniques.json
@@ -42,6 +42,12 @@
       "description": "Иногда лучший способ справиться с тревогой — это мягкое и игровое отвлечение. Эта простая интерактивная активность помогает перенаправить нервную энергию и дает мозгу передышку от тревожных мыслей.",
       "duration": "2-5 мин"
     },
+    "fidgetSpinner": {
+      "name": "Онлайн-спиннер",
+      "short_description": "Успокойте беспокойные руки плавным повторяющимся вращением на любом устройстве.",
+      "description": "Раскрутите, отпустите и наблюдайте, как импульс постепенно исчезает. Простое тактильное действие даёт рукам постоянное занятие, а взгляд следует за ненавязчивым визуальным рисунком — помогает, когда нужна тихая разрядка лишней энергии.",
+      "duration": "1-3 мин"
+    },
     "soundTherapy": {
       "name": "Звуковая терапия",
       "short_description": "Целебные частоты, способствующие расслаблению и ясности ума",
