--- a/i18n/locales/zh/meta.json
+++ b/i18n/locales/zh/meta.json
@@ -32,6 +32,10 @@
       "title": "压力缓解气泡游戏",
       "description": "互动式气泡弹跳游戏，专为压力缓解和焦虑管理设计。通过愉悦的感官体验，有效释放内心紧张感。"
     },
+    "fidgetSpinner": {
+      "title": "在线指尖陀螺 - 让多余能量平稳散去",
+      "description": "极简虚拟指尖陀螺，拥有真实的惯性。拖动即可旋转，松手任其慢慢停下，为不安的双手提供稳定出口。"
+    },
     "soundTherapy": {
       "title": "声音疗法与频率治疗",
       "description": "免费的治疗性声音体验，融合治愈频率和双耳节拍技术。通过深度放松音频，有效缓解焦虑与压力。"
