--- a/i18n/locales/zh/techniques.json
+++ b/i18n/locales/zh/techniques.json
@@ -42,6 +42,12 @@
       "description": "有时候，应对焦虑的最佳方式就是适度的注意力转移和轻松游戏。这个简单的互动活动能够帮助重新引导紧张能量，同时给予思维一个从焦虑循环中解脱的机会。",
       "duration": "2-5 分钟"
     },
+    "fidgetSpinner": {
+      "name": "在线指尖陀螺",
+      "short_description": "在任意设备上通过平稳重复的旋转让不安的手慢慢安静下来。",
+      "description": "轻轻一划让它转动，再放开，看着惯性逐渐减弱。这个简单的触觉动作让双手有事可做，同时视线跟随干净的视觉节奏——当你需要为多余的能量找到安静出口时很有用。",
+      "duration": "1-3 分钟"
+    },
     "soundTherapy": {
       "name": "声音疗法与频率治疗",
       "short_description": "运用治疗性声音频率促进深度放松与精神清明",
